--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-  "client":"cliensdgsdf54sd5f2s1dfsdf",
+  "client":"s7vcz8pfgw4tlc3a873qwxmozuviklo",
   "chaine":"firepandaa",
   "title":"Firepandaa",
   "url_api_statut":"https://api.twitch.tv/kraken/streams/",
   "url_api_title":"https://api.twitch.tv/kraken/channel/",
-  "message":"Firepandaa est en ligne !"
+  "message":"est en ligne !"
 
 }
